--- a/report/bibliography.bib
+++ b/report/bibliography.bib
@@ -220,6 +220,15 @@
   url       = {https://arxiv.org/abs/1807.01774v1},
   year      = {2018}
 }
+@techreport{FCA2018,
+  title       = {Algorithmic Trading Compliance in Wholesale Markets},
+  author      = {{Financial Conduct Authority}},
+  institution = {Financial Conduct Authority (FCA)},
+  year        = {2018},
+  url         = {https://www.fca.org.uk/publication/multi-firm-reviews/algorithmic-trading-compliance-wholesale-markets.pdf},
+  type        = {Technical Report},
+  address     = {London, UK}
+}
 @article{Francois-Lavet2018,
   abstract  = {Deep reinforcement learning is the combination of reinforcement learning (RL) and deep learning. This field of research has been able to solve a wide range of complex decision-making tasks that were previously out of reach for a machine. Thus, deep RL opens up many new applications in domains such as healthcare, robotics, smart grids, finance, and many more. This manuscript provides an introduction to deep reinforcement learning models, algorithms and techniques. Particular focus is on the aspects related to generalization and how deep RL can be used for practical applications. We assume the reader is familiar with basic machine learning concepts.},
   author    = {Vincent François-Lavet and Peter Henderson and Riashat Islam and Marc G. Bellemare and Joelle Pineau},
