--- a/report/tables/dow30_tickers.tex
+++ b/report/tables/dow30_tickers.tex
@@ -1,5 +1,5 @@
 \begin{longtable}{|p{2cm}|p{3cm}|p{4cm}|p{4cm}|}
-\caption{Constituents of the Dow Jones Industrial Average index as of April 2025. \cite{WikipediaDowJones30}}
+\caption{Constituents of the Dow Jones Industrial Average index as of April 2025. \cite{DowJones30}}
 \label{tab:dow30constituents}
 \\ 
 \hline
