--- a/report/tables/eurostoxx50_tickers.tex
+++ b/report/tables/eurostoxx50_tickers.tex
@@ -1,5 +1,5 @@
 \begin{longtable}{|p{2cm}|p{3cm}|p{4cm}|p{4cm}|}
-\caption{Constituents of the Euro Stoxx 50 index as of April 2025\cite{WikipediaEuroStoxx50}.}
+\caption{Constituents of the Euro Stoxx 50 index as of April 2025\cite{EuroStoxx50}.}
 \label{tab:eurostoxx50constituents}
 \\ 
 \hline
