--- a/report/tables/ftse100_tickers.tex
+++ b/report/tables/ftse100_tickers.tex
@@ -1,5 +1,5 @@
 \begin{longtable}{|p{2cm}|p{4cm}|p{6cm}|}
-\caption{Constituents of the FTSE100 index as of April 2025. \cite{WikipediaFtse100}}
+\caption{Constituents of the FTSE100 index as of April 2025. \cite{FTSE100}}
 \label{tab:ftse100constituents}
 \\ 
 \hline
