--- a/report/appendix/datasets.tex
+++ b/report/appendix/datasets.tex
@@ -3,19 +3,19 @@
 \section{Equities} \label{sec:datasets-equities}
 \subsection{Dow Jones 30} \label{sec:datasets-djia}
 
-The \acrfull{djia} is a stock market index with 30 companies listed on \acrfull{us} stock exchanges. The trading symbol is \texttt{\^DJI} and as of April 2025, its constituents are: 
+The \acrfull{djia} is a stock market index with 30 companies listed on \acrfull{us} stock exchanges. The trading symbol is \texttt{DJI} and as of April 2025, its constituents are: 
 
 \input{tables/dow30_tickers.tex}
 
 \subsection{Euro Stoxx 50} \label{sec:datasets-eurostoxx50}
 
-The \acrfull{eurostoxx50} is a stock market index that represents 50 of the largest companies in the Eurozone. The trading symbol is \texttt{\^STOXX50E} and as of April 2025, its constituents are:
+The \acrfull{eurostoxx50} is a stock market index that represents 50 of the largest companies in the Eurozone. The trading symbol is \texttt{STOXX50E} and as of April 2025, its constituents are:
 
 \input{tables/eurostoxx50_tickers.tex}
 
 \subsection{FTSE 100} \label{sec:datasets-ftse100}
 
-The \acrfull{ftse100} is a stock market index that represents 100 of the largest companies listed on the London Stock Exchange. The trading symbol is \texttt{\^FTSE} and as of April 2025, its constituents are:
+The \acrfull{ftse100} is a stock market index that represents 100 of the largest companies listed on the London Stock Exchange. The trading symbol is \texttt{FTSE} and as of April 2025, its constituents are:
 
 \input{tables/ftse100_tickers.tex}
 
