--- a/report/contents/glossary.tex
+++ b/report/contents/glossary.tex
@@ -162,6 +162,11 @@
     text={exploitation},
     description={Process of leveraging known information to make decisions or take actions that are expected to yield the highest reward}
 }
+\newglossaryentry{backtesting}{
+    name=Back-testing,
+    text={back-testing},
+    description={Process of testing a trading strategy or model using historical data to evaluate its performance and effectiveness}
+}
 
 \newacronym{dl}{DL}{\Gls{deeplearning}}
 \newacronym{ml}{ML}{\Gls{machinelearning}}
