--- a/report/contents/results.tex
+++ b/report/contents/results.tex
@@ -113,7 +113,7 @@ The results show that all the algorithms outperform the index for all the consid
 
 \subsection{Environment Representation} \label{sec:environment-representation}
 
-Another source of variability in the performance of the algorithms is the environment representation. In this section, the results of comparing the \acrshort{drl} algorithms on different environment representations are presented. For the experiment to be meaningful, it has been performed on the DowJones30 dataset, the currencies and the commodities datasets. This choice provides the ability to compare the performance of the algorithms across different asset classes, while also allowing for a more manageable computational cost. The table \ref{tab:experiment_environment_sharpe} compares the performance according to the Sharpe ratio and, in Appendix \ref{app:experiment_environment_representation}, according to the cumulative return.
+Another source of variability in the performance of the algorithms is the environment representation. In this section, the results of comparing the \acrshort{drl} algorithms on different environment representations are presented. For the experiment to be meaningful, it has been performed on the DowJones30, the currencies and the commodities datasets. This choice provides the ability to compare the performance of the algorithms across different asset classes, while also allowing for a more manageable computational cost. The table \ref{tab:experiment_environment_sharpe} compares the performance according to the Sharpe ratio and, in Appendix \ref{app:experiment_environment_representation}, according to the cumulative return.
 
 \input{tables/experiment_environment_sharperatio.tex}
 
@@ -125,12 +125,12 @@ Finally, for the currencies dataset, the performance of the algorithms is signif
 
 \subsection{Hyper-parameter Tuning} \label{sec:hyper-parameter-tuning}
 
-As has been mentioned in the above experiments, the performance of the algorithms is substantially influenced by the choice of hyper-parameters. Ideally, a systematic approach should be employed to find the optimal hyper-parameters for each algorithm, dataset and environment representation combination. However, due to the computational cost of hyper-parameter tuning, it was only performed for the DowJones30 dataset with the \acrshort{ohlcv} and indicators environment representations over five trials. The results for each of the algorithms with the default hyper-parameters versus the tuned hyper-parameters are compared in Table \ref{tab:experiment_hyperparameters_simple} and Table \ref{tab:experiment_hyperparameters_indicators} for the two features sets: simple and with indicators, respectively.
+As has been mentioned in the above experiments, the performance of the algorithms is substantially influenced by the choice of hyper-parameters. Ideally, a systematic approach should be employed to find the optimal hyper-parameters for each algorithm, dataset and environment representation combination. However, due to the computational cost of hyper-parameter tuning, it was only performed for the DowJones30 dataset with the \acrshort{ohlcv} and indicators environment representations over five trials. The results for each of the algorithms with the default hyper-parameters versus the tuned hyper-parameters are presented in Table \ref{tab:experiment_hyperparameters_simple} and Table \ref{tab:experiment_hyperparameters_indicators} for the two features sets: simple and with indicators, respectively.
 
 \input{tables/experiment_hyperparameters_dow30_simple.tex}
 \input{tables/experiment_hyperparameters_dow30_indicators.tex}
 
-By looking at the data presented in these tables, it is clear that finding the optimal configuration can have a significant impact on the performance of the algorithms. For instance, although the cumulative return for \acrshort{a2c} in the simple feature set only improves by 1\%, the Sharpe ratio increases from 1.32 to 1.43, meaning that the algorithm learns to better balance risk while maximising returns. Another example is the \acrshort{sac} algorithm, which achieves a better performance than that of the default configuration. However, for the \acrshort{ppo}, \acrshort{ddpg} and \acrshort{td3} algorithms, there are no improvements and the default hyper-parameters perform better. Similarly, when looking at the indicators feature set, not all the algorithms show sign of improvements. These means that, for that particular algorithm, dataset and environment representation combination, the optimal hyper-parameter configuration has not been found. Understandably, due to the limited computational resources, the hyper-parameter search was very limited to only five runs, which is not sufficient for a thorough search.
+By comparing the data presented in these tables, it is clear that finding the optimal configuration can have a significant impact on the performance of the algorithms. For instance, although the cumulative return for \acrshort{a2c} in the simple feature set only improves by 1\%, the Sharpe ratio increases from 1.32 to 1.43, meaning that the algorithm learns to better balance risk while maximising returns. Another example is the \acrshort{sac} algorithm, which achieves a better performance than that of the default configuration. However, for the \acrshort{ppo}, \acrshort{ddpg} and \acrshort{td3} algorithms, there are no improvements and the default hyper-parameters perform better. Similarly, when looking at the indicators feature set, not all the algorithms show sign of improvements. This means that, for that particular algorithm, dataset and environment representation combination, the optimal hyper-parameter configuration has not been found. Understandably, due to the limited computational resources, the hyper-parameter search was very limited to only five runs, which is not sufficient for a thorough search.
 
 \section{Explainability Results} \label{sec:explainability-framework}
 
@@ -138,7 +138,7 @@ A main objective of this thesis is to be able to interpret the decisions made by
 
 For the purposes of visualisation, the results are shown for a sample dataset of five tickers (AAPL, CSCO, HON, MSFT, V) from the \acrshort{djia} and using only the open, close, high, and low prices as the environment representation. This choice is made because explanations are more easily visualised when the number of assets and features is small. However, the explainability framework itself is general and can be applied to any number of assets and any environment representation. In practice, to support larger portfolios and more complex feature sets, an interactive dashboard could be developed, allowing users to select the relevant assets in the portfolio for which explanations are required. Moreover, only the explanations of the \acrshort{a2c} algorithm are presented, as it serves as a representative example of the framework's capabilities.
 
-The surrogate model was implemented following the proposal by de-la-Rica-Escudero et al. (2025) \cite{de-La-Rica-Escudero2025}. Although their paper does not explicitly acknowledge the use of a surrogate model nor outline the reasons for its use, it can be inferred that using a simpler transparent algorithm as a proxy provides built-in feature importance, which is a global explainability method. However, there does not seem to be any added value when using \acrshort{lime} and \acrshort{shap} as they are both model-agnostic methods capable of providing explanations for any black-box model.
+To provide interpretations, several explainability techniques were employed. The surrogate model was implemented following the proposal by de-la-Rica-Escudero et al. (2025) \cite{de-La-Rica-Escudero2025}. Although their paper does not explicitly acknowledge the use of a surrogate model nor outline the reasons for its use, it can be inferred that using a simpler transparent algorithm as a proxy provides built-in feature importance, which is a global explainability method. However, there does not seem to be any added value when using \acrshort{lime} and \acrshort{shap} as they are both model-agnostic methods capable of providing explanations for any black-box model. Consequently, direct model explanations were applied using these two methods.
 
 \subsection{Feature Importance Results} \label{sec:feature-importance-results}
 
@@ -164,7 +164,14 @@ Another interesting result about the feature importance shown in Figure \ref{fig
 
 \subsection{Local Interpretable Model-agnostic Explanations Results} \label{sec:lime-results}
 
-Moving on to the local explanations of \acrshort{lime}, the direct explanations for the \acrshort{a2c} algorithm are provided. The benefit of \acrshort{lime} is its ability to provide explanations at a particular point in time. In this case, the local explanations are provided for an instance of the test dataset, i.e. a specific trading day. In this section, Figure \ref{fig:a2c_lime_msft} illustrates the local explanations for the MSFT asset, whilst the other assets are found in Appendix \ref{app:lime_explanations}. This particular instance is affected by V's low price in the positive terms, meaning that it pushes the price higher, whilst the high price of CSCO and the open of V negatively affect the prediction by pushing it lower. Looking at these explanations over a number of days can help an investor decide whether there exist particular features that consistently contribute to the portfolio allocation decision.
+The \acrshort{lime} method provides local explanations for individual predictions, to determine the most influential features in a model's decision for a particular instance. For a particular instance, the library displays the explanation as three components:
+\begin{itemize}
+    \item the predicted value of the model, within a minimum and maximum range;
+    \item a list of the top ten features that contributed to the model's prediction, with their corresponding values and their contribution; and
+    \item a coloured list outlining the feature values, corresponding to positive (orange) or negative (blue) contribution.
+\end{itemize}
+
+Figure \ref{fig:a2c_lime_msft} presents the \acrshort{lime} explanation for the MSFT asset on a selected trading day from the test dataset, while the other assets are found in Appendix \ref{app:lime_explanations}. In this instance, the low price of V contributes positively to the MSFT allocation, while the high price of CSCO and the open price of V negatively affect the prediction by pushing it lower. Examining such local explanations across multiple time steps can help identify features that consistently impact portfolio allocation decisions.
 
 \begin{figure}
     \centering
@@ -175,9 +182,9 @@ Moving on to the local explanations of \acrshort{lime}, the direct explanations 
 
 \subsection{Shapley Additive Explanations Results} \label{sec:shap-results}
 
-Finally, the results of the \acrshort{shap} analysis provide a global view of the feature importance across all time steps and assets, as well as a local interpretation for individual predictions. As with the case of \acrshort{lime}, instead of using a surrogate model, the explanations are extracted from the \acrshort{a2c} model directly. Since the predictions of the output are weight allocations across all portfolio assets, the \acrshort{shap} values presented in this section correspond only to AAPL, but the interpretations can be generalised to other assets and algorithms.
+The results of the \acrshort{shap} analysis provide both a global view of the feature importance across all time steps and assets, as well as a local interpretation for individual predictions. As with the case of \acrshort{lime}, instead of using a surrogate model, the explanations are extracted from the \acrshort{a2c} model directly. Since the predictions of the output are weight allocations across all portfolio assets, the \acrshort{shap} values presented in this section correspond only to AAPL, but the interpretations can be generalised to other assets and algorithms.
 
-Figure \ref{fig:a2c_shap_beeswarm_aapl} depicts a beeswarm plot, where the x-axis represents the \acrshort{shap} value, which measures the impact of a feature on the model's output; while the y-axis displays the top features. Each point in the beeswarm plot represents a single prediction, with the point's colour indicating whether its corresponding feature value is low, coloured in blue, or high, coloured in magenta. The beeswarm plot provides a visual representation of the distribution of \acrshort{shap} values for each feature, allowing for an easy comparison of their importance. Surprisingly, the most important feature for the AAPL asset is the low price of the MSFT asset and, by visual inspection, the high values of the low price of MSFT push the AAPL allocation lower, while the low values of the low price of MSFT push the AAPL allocation higher. However, this is not quite significant as there is a cluster of data points around the zero, indicating that, for a number of trading days, the low price of MSFT does not have an impact on AAPL's allocation. 
+Figure \ref{fig:a2c_shap_beeswarm_aapl} depicts a beeswarm plot, where the x-axis represents the \acrshort{shap} value, which measures the impact of a feature on the model's output; while the y-axis displays the top features. Each point in the beeswarm plot represents a single prediction, with the point's colour indicating whether its corresponding feature value is low, coloured in blue, or high, coloured in magenta. The beeswarm plot provides a visual representation of the distribution of \acrshort{shap} values for each feature, allowing for an easy comparison of their importance. The most important feature for the AAPL asset is the low price of the MSFT asset and, by visual inspection, the high values of the low price of MSFT push the AAPL allocation lower, while the low values of the low price of MSFT push the AAPL allocation higher. However, this is not quite significant as there is a cluster of data points around the zero, indicating that, for a number of trading days, the low price of MSFT does not have an impact on AAPL's allocation. 
 
 \begin{figure}
     \centering
@@ -190,12 +197,12 @@ The \texttt{shap} Python library provides numerous visualisations to explain the
 
 \begin{figure}
     \centering
-    \includegraphics[width=0.8\textwidth]{figures/a2c_shap_forceplot_aapl.png}
+    \includegraphics[width=\textwidth]{figures/a2c_shap_forceplot_aapl.png}
     \caption{\acrshort{shap} force plot for the weight allocation of the AAPL asset for the \acrshort{a2c} algorithm.}
     \label{fig:a2c_shap_forceplot_aapl}
 \end{figure}
 
-The \texttt{shap} library provides the output in an interactive \acrfull{html} format that allows us to interact with the visualisation and gain deeper insights into the model's behaviour. Using the force plot, it is possible to single out the effects of AAPL's most important feature over the test period, as shown in Figure \ref{fig:a2c_shap_forceplot_aapl_lowmsft}, as well as its isolated effect in one specific prediction. Its impact is very well-defined as for approximately the first 30 samples, it has a positive contribution, increasing the allocation, while for the rest of the time steps, it has a negative contribution, decreasing it.
+The library provides the output in \acrfull{html} format that allows interaction with the visualisation and to gain deeper insights into the model's behaviour. Using the force plot, it is possible to single out the effects of AAPL's most important feature over the test period, as shown in Figure \ref{fig:a2c_shap_forceplot_aapl_lowmsft}. Its impact is very well-defined. For approximately the first 30 time steps, it has a positive contribution, increasing AAPL's allocation, while for the remainder of the test period, it has mostly a negative contribution, decreasing the asset weight.
 
 \begin{figure}
     \centering
