--- a/report/tables/experiment_hyperparameters_dow30_indicators.tex
+++ b/report/tables/experiment_hyperparameters_dow30_indicators.tex
@@ -1,5 +1,5 @@
 \begin{longtable}{|l|l|l|l|}
-    \caption{Hyper-parameter tuning experiment results for the DowJones30 dataset with indicators environment representation.}
+    \caption{Hyper-parameter tuning experiment results for the DowJones30 dataset with indicators feature set.}
     \label{tab:experiment_hyperparameters_indicators}
     \\ 
     \hline
