--- a/report/tables/experiment_hyperparameters_dow30_simple.tex
+++ b/report/tables/experiment_hyperparameters_dow30_simple.tex
@@ -1,5 +1,5 @@
 \begin{longtable}{|l|l|l|l|}
-    \caption{Hyper-parameter tuning experiment results for the DowJones30 dataset with simple environment representation.}
+    \caption{Hyper-parameter tuning experiment results for the DowJones30 dataset with simple feature set.}
     \label{tab:experiment_hyperparameters_simple}
     \\ 
     \hline
